# bantaba

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
app/: README.md  l10n.yaml  pubspec.yaml
app/.probe/: probe_test.dart
app/android/app/: build.gradle.kts
app/lib/: main.dart
app/lib/src/: format.dart  layout.dart  routes.dart  theme.dart
app/linux/: CMakeLists.txt
app/linux/assets/: com.incubtek.jeliya.desktop  com.incubtek.jeliya.metainfo.xml
app/linux/runner/: my_application.cc
app/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements  Sidecar.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: a11y_matrix_test.dart  a11y_semantics_test.dart  a11y_text_scale_test.dart  boot_failure_test.dart  boot_flow_test.dart  daemon_runtime_test.dart  data_dir_test.dart  dialog_containment_test.dart  error_surfaces_test.dart  fleet_test.dart  flutter_test_config.dart  format_test.dart  helpers.dart  invite_flow_test.dart  invite_share_test.dart  l10n_parity_test.dart  locale_switch_test.dart  locale_test.dart  mobile_back_policy_test.dart  mobile_breakpoint_test.dart  mobile_chat_route_test.dart  mobile_fleet_test.dart  mobile_flow_layout_test.dart  mobile_flows_test.dart  mobile_modal_flows_test.dart  mobile_panel_test.dart  mobile_rooms_screen_test.dart  mobile_settings_test.dart  mobile_shell_test.dart  mobile_tab_bar_test.dart  onboarding_test.dart  panel_fr_layout_test.dart  predictive_back_test.dart  prefs_store_test.dart  room_appbar_test.dart  room_list_test.dart  room_list_ui_test.dart  room_recovery_test.dart  routes_test.dart  self_label_test.dart  (+9 more)
crates/bantaba-core/: Cargo.toml
crates/bantaba-core/src/: identity.rs  lib.rs  supervisor.rs
crates/bantabad/: Cargo.toml
crates/bantabad/src/: main.rs  rpc.rs
crates/jeliya-core/: Cargo.toml
crates/jeliya-core/src/: engine.rs  lib.rs  localstate.rs  materializer.rs  (+1 more)
crates/jeliya-ffi/: Cargo.toml  build.rs
crates/jeliya-ffi/src/: dart_api.rs  host.rs  lib.rs
crates/jeliyad/: Cargo.toml
dart/jeliya_protocol/: README.md  pubspec.yaml
docs/: PROTOCOL.md  accessibility-checklist.md  agent-guide.md  agent-orchestration.md  capability-status.md  gate-a-result.md  glossary-fr.md  i18n.md  index.md  known-gaps-roadmap.md  platform-matrix.md  production-deployment.md  realnet-runbook.md  release-vs-main.md  room-workbench.md  security-threat-model.md  signing-notarization.md  verification-evidence.md
packaging/: README.md  install.ps1  jeliya-app.rb
scripts/: agent-e2e.mjs  check-docs.test.mjs  check-release.mjs  check-release.test.mjs  check-ui-i18n.mjs  check-ui-i18n.test.mjs  demo-agent.mjs  demo.sh  e2e-port-safety.test.mjs  e2e-process-ownership.mjs  e2e.mjs  finalize-release.sh  finalize-release.test.mjs  fleet-e2e.mjs  gate-a.mjs  gen-l10n-parity.mjs  i18n-gate.mjs  jeliya-agent.mjs  package-linux.mjs  package-linux.test.mjs  package-macos.mjs  realnet-evidence.mjs  realnet-evidence.test.mjs  release-receipt.mjs  release-receipt.test.mjs  smoke.mjs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ui/e2e/: a11y-matrix.spec.ts  fixtures.ts  fleet.spec.ts  invite.spec.ts  modal-containment.spec.ts  room-actions.spec.ts  room-disambiguation.spec.ts  room-list.spec.ts
ui/src/: App.tsx  main.tsx  styles.css
(+119 files in other folders)
