[package]
name = "bantaba-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bantaba resident core: the only crate in the project that talks to the iroh-rooms SDK"

[dependencies]
# The SDK facade (stable tier + experimental online runtime). This crate is the
# ONLY place in the Bantaba workspace that imports iroh_rooms.
iroh-rooms = { workspace = true }
# Endpoint address/id/secret types the SDK's online tier exchanges at its API
# boundary (the CLI reference imports these the same way; they are not
# iroh-rooms-core/-net internals).
iroh = "=1.0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
getrandom = "0.4"
zeroize = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
