[package]
name = "bantabad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bantaba daemon: local-only WebSocket server implementing docs/PROTOCOL.md over bantaba-core"

[[bin]]
name = "bantabad"
path = "src/main.rs"

[dependencies]
bantaba-core = { path = "../bantaba-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
